<resources>
    <string name="app_name">Lucky Numbers</string>

    <!-- LuckyNumbers -->
    <string name="app_greetings">Welcome to Lucky Numbers! This simple application will calculate your lucky number!</string>
    <string name="enter_fname">Enter your first name here</string>
    <string name="enter_lname">Enter your last name here</string>

    <!-- Bottom navbar titles -->
    <string name="title_luckynumbers">Lucky Numbers</string>
    <string name="title_results">Results</string>
    <string name="title_settings">Settings</string>

    <!-- Settings -->
    <string name="enable_dark_theme">Enable dark theme</string>
    <string name="dark_theme_summary_true">Using dark theme</string>
    <string name="dark_theme_summary_false">Using light theme</string>

    <string name="enable_gridview">Enable grid view</string>
    <string name="gridview_summary_true">Displaying more content on the screen!</string>
    <string name="gridview_summary_false">Not using grid view</string>

    <string name="enable_dbdups">Allow duplicate names to be saved</string>
    <string name="enable_dbdups_summary_true">Allowing duplicates</string>
    <string name="enable_dbdups_summary_false">Not allowing duplicates</string>

    <string name="build_updater">Updater</string>
    <string name="build_updater_summary">Click here to check for updates</string>

    <string name="app_creator">Creator</string>
    <string name="app_creator_name">Adam Myczkowski (mycax)</string>

    <string name="app_github">GitHub</string>
    <string name="app_github_summary">Click here to view the source and contribute!</string>

    <string name="delete_results">Clear results database</string>
    <string name="delete_results_summary">Delete all contents from results database</string>

    <string name="app_libs">About project</string>
    <string name="app_libs_summary">Open source libraries and app version</string>

    <!-- Descriptions -->
    <string name="process_desc">Run Lucky Numbers process</string>
    <string name="reset_desc">Reset fields</string>
    <string name="empty_datab_desc">Empty database drawable</string>
</resources>