<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="app_dark_theme"
        android:title="@string/enable_dark_theme" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="app_enable_grid"
        android:title="@string/enable_gridview" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="app_allow_dbdups"
        android:title="@string/enable_dbdups" />

    <Preference android:key="app_delete_results"
        android:title="@string/delete_results"
        android:summary="@string/delete_results_summary"/>

    <Preference android:key="app_creator"
        android:title="@string/app_creator"
        android:summary="@string/app_creator_name" />

    <Preference android:key="app_github_link"
        android:title="@string/app_github"
        android:summary="@string/app_github_summary"/>

    <Preference android:key="app_opensource_libs"
        android:title="@string/app_libs"
        android:summary="@string/app_libs_summary"/>

    <Preference android:key="build_app_version"
        android:title="@string/build_updater"
        android:summary="@string/build_updater_summary" />

</PreferenceScreen>
